# fs-node

./: CHANGELOG.md  CLAUDE.md  README.md  REFACTORING-PLAN-v3-FINAL.md  RELEASES.md  TODO.md  deny.toml  fsn-install.sh  requirements.yml  setup.sh
cli/: Cargo.toml
cli/crates/fs-builder/: Cargo.toml
cli/crates/fs-builder/src/: analyze.rs  fetch_icon.rs  main.rs  publish.rs  validate.rs  validate_store.rs
cli/crates/fs-container/: Cargo.toml
cli/crates/fs-container/src/: analysis.rs  compose.rs  converter.rs  instance.rs  pipeline.rs  store_client.rs  validation.rs
cli/crates/fs-deploy/: Cargo.toml
cli/crates/fs-deploy/src/: constraints.rs  deploy.rs  diff.rs  health.rs  module_runner.rs  observe.rs  remote.rs  resolve.rs  store.rs  swap.rs  template.rs
cli/crates/fs-deploy/src/generate/: env.rs  kdl.rs  quadlet.rs  systemd_unit.rs
cli/crates/fs-deploy/src/hooks/: common.rs  cryptpad.rs  forgejo.rs  kanidm.rs  lifecycle.rs  mod.rs  openobserver.rs  stalwart.rs  tuwunel.rs  vikunja.rs
cli/crates/fs-deploy/tests/: deploy_lifecycle.rs
cli/crates/fs-dns/src/: hetzner.rs  lib.rs  provider.rs
cli/crates/fs-host/src/: session.rs  systemd.rs
cli/crates/fs-installer/src/: main.rs
cli/crates/fs-node-cli/: Cargo.toml
cli/crates/fs-node-cli/src/: cli.rs  db.rs  main.rs
cli/crates/fs-node-cli/src/commands/: bus.rs  clean.rs  config.rs  container.rs  deploy.rs  deps.rs  init.rs  install.rs  install_root.rs  logs.rs  mod.rs  remove.rs  restart.rs  serve.rs  server_setup.rs  status.rs  storage.rs  store.rs  sync.rs  sysinfo.rs  tui.rs  undeploy.rs  update.rs
cli/crates/fs-node-cli/tests/: init_wizard.rs
cli/crates/fs-node-core/: Cargo.toml
cli/crates/fs-node-core/examples/: schema-gen.rs
cli/crates/fs-node-core/src/: audit.rs  health.rs  lib.rs  resource.rs  store.rs
cli/crates/fs-node-core/src/config/: bot.rs  discovery.rs  host.rs  manifest.rs  meta.rs  mod.rs  plugin.rs  project.rs  registry.rs  settings.rs  validate.rs  vault.rs
cli/crates/fs-node-core/src/state/: actual.rs
cli/crates/fs-node-core/tests/: schema.rs  store_modules.rs
cli/crates/fs-s3/: Cargo.toml
cli/crates/fs-s3/src/: backend.rs  buckets.rs  config.rs  federation.rs  lib.rs  profile.rs  server.rs
cli/crates/fs-template/: Cargo.toml  README.md
cli/crates/fs-template/fuzz/: Cargo.toml
cli/crates/fs-template/fuzz/fuzz_targets/: fuzz_render_str.rs  fuzz_render_str_with_vars.rs
cli/crates/fs-template/src/: context.rs  engine.rs  filters.rs  lib.rs  validator.rs
cli/crates/fs-wizard/: Cargo.toml
cli/crates/fs-wizard/src/: capability_matcher.rs  compose.rs  detect.rs  generate.rs  join.rs  setup_fields.rs  token.rs  wizard.rs
cli/crates/fs-wizard/src/steps/: iam.rs  languages.rs  network.rs  services.rs  timezone.rs
cli/crates/fsn-ansible/: Cargo.toml
cli/crates/fsn-ansible/src/: lib.rs
cli/crates/fsn-builder/: Cargo.toml
cli/crates/fsn-builder/src/: analyze.rs  main.rs  publish.rs  validate.rs  validate_store.rs
cli/crates/fsn-cli/: Cargo.toml
cli/crates/fsn-cli/src/: cli.rs  db.rs  main.rs
cli/crates/fsn-cli/src/commands/: clean.rs  config.rs  deploy.rs  init.rs  mod.rs  remove.rs  restart.rs  serve.rs  status.rs  sync.rs  tui.rs  undeploy.rs  update.rs
cli/crates/fsn-conductor/: Cargo.toml
cli/crates/fsn-conductor/src/: analysis.rs  converter.rs  instance.rs  lib.rs  pipeline.rs  store_client.rs  validation.rs
cli/crates/fsn-container/: Cargo.toml
cli/crates/fsn-container-app/: Cargo.toml
cli/crates/fsn-container-app/src/: converter.rs  instance.rs  store_client.rs  validation.rs
cli/crates/fsn-container/src/: compose.rs  lib.rs  pipeline.rs
cli/crates/fsn-core/: Cargo.toml
cli/crates/fsn-core/src/: error.rs  health.rs  lib.rs  resource.rs  store.rs
cli/crates/fsn-core/src/config/: bot.rs  host.rs  manifest.rs  mod.rs  module.rs  project.rs  registry.rs  service.rs  settings.rs  vault.rs
cli/crates/fsn-core/src/state/: actual.rs  desired.rs  diff.rs  mod.rs
cli/crates/fsn-deploy/: Cargo.toml
cli/crates/fsn-deploy/src/: deploy.rs  diff.rs  lib.rs  module_runner.rs  resolve.rs  store.rs  template.rs
cli/crates/fsn-deploy/src/generate/: env.rs  kdl.rs  mod.rs  quadlet.rs
cli/crates/fsn-deploy/src/hooks/: kanidm.rs
cli/crates/fsn-deploy/tests/: deploy_lifecycle.rs
cli/crates/fsn-dns/: Cargo.toml
cli/crates/fsn-dns/src/: hetzner.rs  lib.rs  provider.rs
cli/crates/fsn-engine/: Cargo.toml
cli/crates/fsn-engine/src/: constraints.rs  deploy.rs  diff.rs  health.rs  lib.rs  module_runner.rs  observe.rs  resolve.rs  setup.rs  store.rs  template.rs
cli/crates/fsn-engine/src/generate/: compose.rs  env.rs  kdl.rs  quadlet.rs
cli/crates/fsn-engine/src/hooks/: common.rs  forgejo.rs  mod.rs
cli/crates/fsn-form/: Cargo.toml
cli/crates/fsn-form-derive/: Cargo.toml
cli/crates/fsn-form-derive/src/: lib.rs
cli/crates/fsn-form/src/: lib.rs
cli/crates/fsn-host/: Cargo.toml
cli/crates/fsn-host/src/: lib.rs
cli/crates/fsn-node-cli/: Cargo.toml
cli/crates/fsn-node-cli/src/: cli.rs  db.rs  main.rs
cli/crates/fsn-node-cli/src/commands/: bus.rs  conductor.rs  container.rs  container_app.rs  mod.rs  serve.rs  store.rs  (+2 more)
cli/crates/fsn-podman/: Cargo.toml
cli/crates/fsn-podman/src/: lib.rs  podman.rs  systemd.rs
cli/crates/fsn-s3/: Cargo.toml
cli/crates/fsn-s3/src/: backend.rs  buckets.rs  config.rs  federation.rs  lib.rs  profile.rs  server.rs
cli/crates/fsn-tui/: Cargo.toml  build.rs
cli/crates/fsn-tui/src/: actions.rs  app.rs  bot_form.rs  click_map.rs  deploy_thread.rs  events.rs  events_dashboard.rs  form_queue.rs  handles.rs  host_form.rs  i18n.rs  lib.rs  mouse.rs  project_form.rs  resource_form.rs  schema_form.rs  service_form.rs  settings_form.rs  submit.rs  task_queue.rs
cli/crates/fsn-web/: Cargo.toml
cli/crates/fsn-web/src/: api.rs  lib.rs  routes.rs
cli/crates/fsn-web/static/: index.html
cli/crates/fsn-wizard/: Cargo.toml
cli/crates/fsn-wizard/src/: compose.rs  detect.rs  generate.rs  lib.rs  setup_fields.rs  wizard.rs
cli/fuzz/: Cargo.toml
cli/fuzz/fuzz_targets/: fuzz_config.rs  fuzz_template.rs
(+62 files in other folders)
