[workspace]
members = [
    "crates/fsn-node-core",
    "crates/fsn-deploy",
    "crates/fsn-dns",
    "crates/fsn-host",
    "crates/fsn-wizard",
    "crates/fsn-node-cli",
    "crates/fsn-installer",
    "crates/fsn-s3",
    "crates/fsn-container",
    "crates/fsn-builder",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/Node"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]
# fs-libs — shared libraries monorepo
fsn-types     = { path = "../../fs-libs/fsn-types" }
fsn-error     = { path = "../../fs-libs/fsn-error" }
fsn-config    = { path = "../../fs-libs/fsn-config" }
fsn-health    = { path = "../../fs-libs/fsn-health" }
fsn-template  = { path = "../../fs-libs/fsn-template" }
fsn-db        = { path = "../../fs-libs/fsn-db", features = ["sqlite"] }
fsn-crypto    = { path = "../../fs-libs/fsn-crypto" }
fsn-bus       = { path = "../../fs-libs/fsn-bus" }
fsn-inventory = { path = "../../fs-libs/fsn-inventory" }
fsn-sysinfo   = { path = "../../fs-libs/fsn-sysinfo" }
fsn-i18n      = { path = "../../fs-libs/fsn-i18n" }
fsn-theme     = { path = "../../fs-libs/fsn-theme" }
fsn-help      = { path = "../../fs-libs/fsn-help" }
fsn-plugin-sdk     = { path = "../../fs-libs/fsn-plugin-sdk" }
fsn-plugin-runtime = { path = "../../fs-libs/fsn-plugin-runtime" }
fsn-store          = { path = "../../fs-libs/fsn-store" }

# Internal crates
fsn-node-core = { path = "crates/fsn-node-core" }
fsn-deploy    = { path = "crates/fsn-deploy" }
fsn-dns       = { path = "crates/fsn-dns" }
fsn-host      = { path = "crates/fsn-host" }
fsn-wizard    = { path = "crates/fsn-wizard" }
fsn-s3        = { path = "crates/fsn-s3" }
fsn-container = { path = "crates/fsn-container" }

# Serialization
serde          = { version = "1",    features = ["derive"] }
toml           = { version = "0.8",  features = ["preserve_order"] }
serde_json     = { version = "1" }
indexmap       = { version = "2",    features = ["serde"] }

# Async runtime
tokio          = { version = "1",    features = ["full"] }

# Error handling
anyhow         = { version = "1" }
thiserror      = { version = "2" }

# CLI
clap           = { version = "4",    features = ["derive", "color", "env"] }

# HTTP client (DNS APIs, store)
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Logging / tracing
tracing        = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Secrets (zero-on-drop, never Debug)
secrecy        = { version = "0.10", features = ["serde"] }

# Encryption at rest (vault.age)
age            = { version = "0.10", features = ["armor"] }

# YAML parsing (wizard)
serde_yaml     = { version = "0.9" }

# Time
chrono         = { version = "0.4", features = ["serde"] }

# Misc
walkdir        = { version = "2" }
async-trait    = { version = "0.1" }
libc           = { version = "0.2" }
uuid           = { version = "1", features = ["v4", "serde"] }

# Random (crypto-safe RNG)
rand           = { version = "0.8" }

# SSH (remote deploy)
russh          = { version = "0.45" }
russh-keys     = { version = "0.45" }

# HTTP server (fsn serve — REST API for Desktop)
axum           = { version = "0.8", features = ["json", "http1", "tokio"] }
tower-http     = { version = "0.6", features = ["cors"] }

# S3 server (fsn-s3)
hyper          = { version = "1", features = ["server", "http1", "http2"] }
hyper-util     = { version = "0.1", features = ["tokio", "server"] }
opendal        = { version = "0.51", features = ["services-fs"] }

# WebSocket (Desktop Live-Updates, fsn serve)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# gRPC (Inter-Process Communication)
tonic          = { version = "0.12" }
prost          = { version = "0.13" }

# JSON-Schema Generation aus Rust-Structs
schemars       = { version = "0.8", features = ["preserve_order", "indexmap2"] }

# Test infrastructure (declared here; individual crates use in [dev-dependencies])
rstest         = { version = "0.23" }
insta          = { version = "1",   features = ["toml"] }
testcontainers = { version = "0.23" }
tempfile       = { version = "3" }

