[workspace]
members = [
    "crates/fs-node-core",
    "crates/fs-deploy",
    "crates/fs-dns",
    "crates/fs-host",
    "crates/fs-wizard",
    "crates/fs-node-cli",
    "crates/fs-installer",
    "crates/fs-s3",
    "crates/fs-container",
    "crates/fs-builder",
    "crates/fs-template",
]
resolver = "2"

[workspace.package]
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/Node"

# ── Shared dependency versions ────────────────────────────────────────────────
[workspace.dependencies]
# fs-libs — shared libraries monorepo
fs-types     = { path = "../../fs-libs/fs-types" }
fs-error     = { path = "../../fs-libs/fs-error" }
fs-config    = { path = "../../fs-config" }
fs-health    = { path = "../../fs-libs/fs-health" }
fs-template  = { path = "crates/fs-template" }
fs-db        = { path = "../../fs-db", features = ["sqlite"] }
fs-crypto    = { path = "../../fs-libs/fs-crypto" }
fs-bus       = { path = "../../fs-bus" }
fs-inventory = { path = "../../fs-inventory" }
fs-sysinfo   = { path = "../../fs-info", package = "fs-info" }
fs-i18n      = { path = "../../fs-i18n" }
fs-theme     = { path = "../../fs-theme" }
fs-help      = { path = "../../fs-libs/fs-help" }
fs-pkg            = { path = "../../fs-packages/fs-pkg" }
fs-plugin-sdk     = { path = "../../fs-packages/fs-plugin-sdk" }
fs-plugin-runtime = { path = "../../fs-packages/fs-plugin-runtime" }
# Internal crates
fs-node-core = { path = "crates/fs-node-core" }
fs-deploy    = { path = "crates/fs-deploy" }
fs-dns       = { path = "crates/fs-dns" }
fs-host      = { path = "crates/fs-host" }
fs-wizard    = { path = "crates/fs-wizard" }
fs-s3        = { path = "crates/fs-s3" }
fs-container  = { path = "crates/fs-container" }
fs-auth       = { path = "../../fs-auth" }
fs-federation = { path = "../../fs-federation" }

# Auth / Federation
jsonwebtoken          = { version = "10" }
oauth2                = { version = "5" }
activitypub_federation = { version = "0.6", default-features = false }
url                   = { version = "2" }
urlencoding           = { version = "2" }

# Serialization
serde          = { version = "1",    features = ["derive"] }
toml           = { version = "1",    features = ["preserve_order"] }
serde_json     = { version = "1" }
serde_yml      = { version = "0.0.12" }
indexmap       = { version = "2",    features = ["serde"] }

# Async runtime
tokio          = { version = "1",    features = ["full"] }

# Error handling
anyhow         = { version = "1" }
thiserror      = { version = "2" }

# CLI
clap           = { version = "4",    features = ["derive", "color", "env"] }

# HTTP client (DNS APIs, store)
reqwest        = { version = "0.13", features = ["json", "query", "rustls"], default-features = false }

# Logging / tracing
tracing        = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Secrets (zero-on-drop, never Debug)
secrecy        = { version = "0.10", features = ["serde"] }

# Encryption at rest (vault.age)
age            = { version = "0.11", features = ["armor"] }

# Time
chrono         = { version = "0.4", features = ["serde"] }

# Misc
walkdir        = { version = "2" }
async-trait    = { version = "0.1" }
libc           = { version = "0.2" }
uuid           = { version = "1", features = ["v4", "serde"] }

# Random (crypto-safe RNG)
rand           = { version = "0.9" }

# SSH (remote deploy)
russh          = { version = "0.45" }
russh-keys     = { version = "0.45" }

# HTTP server (fsn serve — REST API for Desktop)
axum           = { version = "0.8", features = ["json", "http1", "tokio"] }
tower-http     = { version = "0.6", features = ["cors"] }

# S3 server (fs-s3)
hyper          = { version = "1", features = ["server", "http1", "http2"] }
hyper-util     = { version = "0.1", features = ["tokio", "server"] }
opendal        = { version = "0.55", features = ["services-fs"] }

# WebSocket (Desktop Live-Updates, fsn serve)
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }

# gRPC (Inter-Process Communication)
tonic          = { version = "0.14" }
prost          = { version = "0.14" }

# JSON-Schema Generation aus Rust-Structs
schemars       = { version = "1", features = ["preserve_order", "indexmap2"] }

# Test infrastructure (declared here; individual crates use in [dev-dependencies])
rstest         = { version = "0.23" }
insta          = { version = "1",   features = ["toml"] }
testcontainers = { version = "0.23" }
tempfile       = { version = "3" }

