[package]
name        = "fs-builder"
description = "FreeSynergy Resource Builder CLI — analyze, validate, and publish FSN resources"
version.workspace   = true
edition.workspace   = true
license.workspace   = true
authors.workspace   = true
repository.workspace = true

[[bin]]
name = "fs-builder"
path = "src/main.rs"

[dependencies]
fs-types  = { workspace = true }
fs-crypto = { workspace = true, features = ["signing"] }
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yml  = { workspace = true }
toml       = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
clap       = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest    = { workspace = true }
tokio      = { workspace = true }
