[package]
name        = "fs-container"
description = "FreeSynergy.Node – Container App Manager: compose YAML → Quadlet pipeline"
version     = "0.2.0"
edition.workspace    = true
license.workspace    = true

[dependencies]
# Lib.Ext fs-container: low-level container abstraction (ServiceConfig, QuadletManager, …)
fs-container-ext = { path = "../../../../fs-container", package = "fs-container" }
serde         = { workspace = true }
serde_yml     = { workspace = true }
indexmap      = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
reqwest       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
