[package]
name        = "fs-node-cli"
description = "FreeSynergy.Node – command-line management tool"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[[bin]]
name = "fsn"
path = "src/main.rs"

[dependencies]
fs-node-core  = { workspace = true }
fs-types      = { workspace = true }
fs-db         = { workspace = true }
fs-deploy     = { workspace = true }
fs-dns        = { workspace = true }
fs-host       = { workspace = true }
fs-container = { workspace = true }
fs-sysinfo    = { workspace = true }
fs-i18n       = { workspace = true }
fs-s3         = { workspace = true }
fs-bus        = { workspace = true }
clap        = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
libc        = { workspace = true }
rand           = { workspace = true }
chrono         = { workspace = true }
axum           = { workspace = true, features = ["ws"] }
tower-http     = { workspace = true }
serde_json     = { workspace = true }
reqwest        = { workspace = true }
uuid           = { workspace = true }
fs-pkg        = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
