[package]
name        = "fsn-cli"
description = "FreeSynergy.Node – command-line management tool"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[[bin]]
name = "fsn"
path = "src/main.rs"

[dependencies]
fsn-core       = { workspace = true }
fsn-engine     = { workspace = true }
fsy-container  = { workspace = true }
fsn-dns        = { workspace = true }
fsn-web     = { workspace = true }
fsn-tui     = { workspace = true }
clap        = { workspace = true }
tokio       = { workspace = true }
anyhow      = { workspace = true }
toml        = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
libc        = { workspace = true }
