[package]
name        = "fsn-conductor"
description = "FreeSynergy.Node – Conductor: compose YAML → Quadlet pipeline"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
fsn-container = { workspace = true }
serde         = { workspace = true }
serde_yaml    = { workspace = true }
serde_json    = { workspace = true }
indexmap      = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tokio         = { workspace = true }
tracing       = { workspace = true }
reqwest       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
