[package]
name        = "fsn-container-app"
description = "FreeSynergy.Node – Container App Manager: compose YAML → Quadlet pipeline"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
fsn-container = { workspace = true }
serde         = { workspace = true }
serde_yaml    = { workspace = true }
indexmap = { workspace = true }
anyhow   = { workspace = true }
tracing  = { workspace = true }
reqwest       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
