[package]
name        = "fsn-container"
description = "FreeSynergy.Node – Container App Manager: compose YAML → Quadlet pipeline"
version     = "0.2.0"
edition.workspace    = true
license.workspace    = true

[dependencies]
# Lib.Ext fsn-container: low-level container abstraction (ServiceConfig, QuadletManager, …)
fsn-container-ext = { path = "../../../../fs-libs/fsn-container", package = "fsn-container" }
serde         = { workspace = true }
serde_yaml    = { workspace = true }
indexmap      = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
reqwest       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
