[package]
name        = "fsn-core"
description = "FreeSynergy.Node – core data types and config parsing"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
serde      = { workspace = true }
toml       = { workspace = true }
serde_json = { workspace = true }
indexmap   = { workspace = true }
thiserror  = { workspace = true }
secrecy    = { workspace = true }
walkdir    = { workspace = true }
anyhow     = { workspace = true }
