[package]
name        = "fsn-engine"
description = "FreeSynergy.Node – state reconciliation and code generation engine"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
fsn-core   = { workspace = true }
serde      = { workspace = true }
toml       = { workspace = true }
indexmap   = { workspace = true }
minijinja  = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
