[package]
name        = "fsn-engine"
description = "FreeSynergy.Node – state reconciliation and code generation engine"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
store-sdk          = { workspace = true }
fsn-core           = { workspace = true }
fsy-plugin-runtime = { workspace = true }
fsy-template       = { workspace = true }
fsy-container      = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
toml               = { workspace = true }
indexmap           = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
reqwest            = { workspace = true }
tracing            = { workspace = true }
