[package]
name        = "fsn-form-derive"
description = "FreeSynergy.Node – proc-macro #[derive(Form)] for form schema generation"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote       = "1"
syn         = { version = "2", features = ["full"] }
