[package]
name        = "fsn-podman"
description = "FreeSynergy.Node – Podman and systemd interface"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
fsn-core = { workspace = true }
tokio    = { workspace = true }
anyhow   = { workspace = true }
serde    = { workspace = true }
serde_json = { workspace = true }
