[package]
name        = "fsn-tui"
description = "FreeSynergy.Node – terminal UI dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# FreeSynergy.UI — will be used progressively as API migration completes
fsy-core   = { workspace = true }
fsy-tui    = { workspace = true }
fsn-form   = { workspace = true }
fsn-core   = { workspace = true }
fsn-engine    = { workspace = true }
fsy-container = { workspace = true }
ratatui       = { workspace = true }
crossterm     = { workspace = true }
rat-salsa     = { workspace = true }
rat-widget    = { workspace = true }
rat-menu      = { workspace = true }
rat-theme4    = { workspace = true }
tui-big-text  = { workspace = true }
sysinfo    = { workspace = true }
anyhow     = { workspace = true }
reqwest    = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }
serde      = { workspace = true }
toml       = { workspace = true }
arboard    = { workspace = true }
