[package]
name        = "fsn-web"
description = "FreeSynergy.Node – WebUI backend (axum + embedded SPA)"
version.workspace    = true
edition.workspace    = true
license.workspace    = true

[dependencies]
fsn-core      = { workspace = true }
fsy-container = { workspace = true }
fsn-engine    = { workspace = true }
axum       = { workspace = true }
tower-http = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
